# robot_framework_demo

./: .gitignore  README.md  pyproject.toml
.agents/: ci-author.md  reviewer.md  robot-author.md  shared.md
.github/workflows/: ui-tests.yml
docs/: acceptance-criteria.md  architecture.md  coding-standards.md  getting-started.md  testing-strategy.md
scripts/: wait_for_url.py
scripts/reporting/: build_pages_site.py
scripts/test_support/: search_cases.py
tests/data/: login_credentials.csv  search_keywords.csv  search_keywords.xlsx  search_keywords_datadriver.csv
tests/resources/: basket.resource  browser_setup.resource  juice_shop.resource  login.resource
tests/robot/: basket.robot  login.robot  search_method_1.robot  search_method_1_DataDriver.robot  search_method_1_Python_Reader.robot  search_method_2.robot  search_method_2_DataDriver.robot  search_method_2_Python_Reader.robot  search_method_3.robot  search_method_3_RPA_Excel_Files.robot  shop_journeys.robot
tests/variables/: environment.resource
webshop_app/: docker-compose.yml
xINSPIRATION/: IDEAS.md.robot  debug_search_edge_cases.robot  debug_whitespace_search.robot  search_method_3_RPA_Excel_Files_IDEA.robot  search_method_4_RPA.Tables.robot
xblog/: blog.md
