[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "robot-framework-webshop-demo"
version = "0.1.0"
description = "Robot Framework Browser demo against OWASP Juice Shop"
requires-python = ">=3.11"
dependencies = [
  "robotframework>=7.0,<8.0",
  "robotframework-browser>=18.0,<19.0",
  "robotframework-datadriver>=1.11,<2.0",
]

[project.optional-dependencies]
dev = []

[tool.setuptools]
packages = []
